--- a/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar_view.xml
@@ -16,26 +16,6 @@
         android:layout_margin="@dimen/margin_4dp"
         android:background="@drawable/bg_light_pink_rounded_r12">
 
-        <FrameLayout
-            android:id="@+id/azure_communication_ui_participant_view_avatar_raised_hand_frame"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_rounded_orange_frame_r12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <FrameLayout
-            android:id="@+id/azure_communication_ui_participant_view_avatar_is_speaking_frame"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_rounded_purple_frame_r12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -101,6 +81,35 @@
                 app:srcCompat="@drawable/ic_microphone_off" />
 
         </LinearLayout>
+
+        <com.acs_plugin.calling.presentation.fragment.calling.reactionoverlay.ReactionOverlayView
+            android:id="@+id/azure_communication_ui_participant_avatar_reaction_overlay"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <FrameLayout
+            android:id="@+id/azure_communication_ui_participant_view_avatar_raised_hand_frame"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_rounded_orange_frame_r12"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <FrameLayout
+            android:id="@+id/azure_communication_ui_participant_view_avatar_is_speaking_frame"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_rounded_purple_frame_r12"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
