--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -77,6 +77,7 @@
     <dimen name="icon_size_18dp">18dp</dimen>
     <dimen name="icon_size_24dp">24dp</dimen>
     <dimen name="icon_size_26dp">26dp</dimen>
+    <dimen name="icon_size_56dp">56dp</dimen>
 
     <!-- Progress size -->
     <dimen name="progress_size_24dp">24dp</dimen>
