--- a/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_participant_avatar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.microsoft.fluentui.persona.AvatarView xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.microsoft.fluentui.persona.AvatarView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_participant_view_avatar"
@@ -7,4 +8,8 @@
     android:layout_height="wrap_content"
     app:fluentui_avatarSize="xxlarge"
     app:fluentui_name="User"
-    tools:showIn="@layout/azure_communication_ui_calling_participant_avatar_view" />
+    tools:showIn="@layout/azure_communication_ui_calling_participant_avatar_view"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
