Fixed dark theme bugs, added chat opening from call, refactoring

--- a/android/src/main/res/values/azure_communication_ui_calling_themes.xml
+++ b/android/src/main/res/values/azure_communication_ui_calling_themes.xml
@@ -51,7 +51,7 @@
             true
         </item>
         <item name="android:windowBackground">
-            @color/azure_communication_ui_calling_color_background
+            @color/white
         </item>
     </style>
 
