--- a/android/src/main/res/layout/azure_communication_ui_calling_activity_call_composite.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_activity_call_composite.xml
@@ -7,6 +7,7 @@
     android:id="@+id/azure_communication_ui_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.acs_plugin.calling.presentation.CallCompositeActivity"
     >
     <androidx.fragment.app.FragmentContainerView
