--- a/android/src/main/res/layout/item_action_more.xml
+++ b/android/src/main/res/layout/item_action_more.xml
@@ -21,6 +21,8 @@
         android:id="@+id/action_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:fontFamily="@font/circular_std_book"
         android:textSize="@dimen/text_size_16"
         android:textColor="@color/actions_text_color_selector"
